# cmake-tutorial

./: .gitignore  LICENSE  README.md
Hello-CMake/: CMakeLists.txt  README.md
Hello-headers/: CMakeLists.txt  README.md
static-library/: CMakeLists.txt  README.md
static-library/src/: hello.cpp
